add cancel button to load repos

--- a/GitHubManager/MainWindow.xaml
+++ b/GitHubManager/MainWindow.xaml
@@ -91,6 +91,18 @@
                                 Width="150"
                                 Content="Charger les dépôts"
                                 Click="LoadReposButton_Click" />
+                        <TextBlock Text="Nombre de repos :"
+                                   VerticalAlignment="Center"
+                                   Margin="15,0,5,0" />
+                        <ComboBox x:Name="MaxReposComboBox"
+                                  Width="100"
+                                  VerticalAlignment="Center"
+                                  Margin="0,0,10,0" />
+                        <Button x:Name="CancelLoadButton"
+                                Width="100"
+                                Content="Annuler"
+                                Click="CancelLoadButton_Click"
+                                IsEnabled="False" />
                         <TextBlock x:Name="ReposStatusTextBlock"
                                    Margin="15,0,0,0"
                                    VerticalAlignment="Center"
