--- a/GitHubManager/App.xaml
+++ b/GitHubManager/App.xaml
@@ -2,8 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:GitHubManager"
+             xmlns:converters="clr-namespace:GitHubManager.Converters"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <converters:CloneButtonEnabledConverter x:Key="CloneButtonEnabledConverter" />
+            <converters:UpdateButtonEnabledConverter x:Key="UpdateButtonEnabledConverter" />
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
